tenzir/tests/exec/operators/fluent-bit/invalid_plugin.tql
// error: true

from_fluent_bit "does-not-exist"
to_fluent_bit "does-not-exist-2"
